Legend: + : added, - : removed, * : fixed, = : modified

https://github.com/randyoyarzabal/reach

v1.0.3 [21-Oct-2018] - Latest Stable
------------
- Removed --cipher_text= from being passed. Now prompts instead.
* Optimized library imports.
+ Added “not equal“ filter operator as ‘!’
+ Added ‘—host_fields’ to display the headers with corresponding $HF_#
* Improved authentication order: agent, private-key, user/password
* Improved authentication exception messages
+ Added config comments regarding authentication types
* SSH_PRIVATE_KEY_FILE now supports reading from inventory with $HF_#
+ Check for file existence of SSH_PRIVATE_KEY_FILE if defined as $HF_#
+ Re-tested support for RSA key with and without a passphrase
+ New config options:
    CIPHER_KEY_FILE : optional external cipher-key string for password obfuscation
    SSH_AGENT_ONLY : force ssh-agent only authentication
= Config options renamed:
    TRUST_HOSTS renamed to SSH_TRUST_HOSTS
    HOSTS_INPUT_FILE renamed to HOSTS_INVENTORY_FILE
    KEY_COLUMN renamed to IP_OR_HOST_COLUMN
    HOST_MARKER renamed to HOST_DISPLAY_FORMAT
    SSH_PRIVATE_KEY renamed to SSH_PRIVATE_KEY_FILE
= Renamed command-line options:
    -e “Filter Condition” to -f
    -d “Search String” to -s
    -g “Debug Mode” to -d
    -s “sudo to root first” to -u

v1.0.2 [9-Oct-2017]
------------
+ Initial load into GitHub
