@@ -38,6 +38,7 @@ HOST_DISPLAY_FORMAT : $HF_4@$HF_1 ($HF_2): $HF_3
 
 ; Optional, uncomment this and set to True to force reach to use SSH agent authentication only.
 ; By default reach will try authentication in the following order: agent, private key, user/pass
+; SSH_USER_NAME is required is this is set to True
 ;SSH_AGENT_ONLY : True
 
 ; ----------------------------------------------
@@ -53,6 +54,7 @@ HOST_DISPLAY_FORMAT : $HF_4@$HF_1 ($HF_2): $HF_3
 
 ; Optional, uncomment this if you don't want to be prompted each time for a user name to use.
 ; May be overridden in the command-line as: --username=<ssh_user>
+; Required if SSH_AGENT_ONLY is set to True
 ;SSH_USER_NAME : myuser
 ; Or to define per-host (change column # to suit) :
 ;SSH_USER_NAME : $HF_4
